# neomarket

./: .gitignore  README.md  SECURITY.md  package.json
backend/rust/: Cargo.toml
backend/rust/src/: main.rs
backend/rust/src/db/: mod.rs  users.rs
docs/backend/A.P.I./: README.md
docs/backend/database/: README.md  STRUCTURE.md
docs/backend/https/: server.md
examples/backend/api%get_test/: README.md
frontend/: package-lock.json
frontend/public/: index.html
puncte/: README.md  justificare_puncte.md
src/: App.css  NeoMarket.js  login.js
src/backend/rust/: Cargo.toml
src/backend/rust/src/: main.rs
src/backend/rust/src/api/: mod.rs  structures.rs
src/backend/rust/src/db/: mod.rs  structures.rs  users.rs  utils.rs
src/backend/rust/src/encryption/: mod.rs
src/backend/rust/src/environment/: mod.rs
src/backend/scripts/: email_sender.py  other_emailer.py
src/components/: Item.js
src/components/Context/: ShopContext.js
src/components/styles/: Accountstyles.css  Headerstyles.css  Itemstyles.css  Productdisplaystyles.css
src/frontend/: .env  grtf  imageserver.js  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js  NeoMarket.js  email.js  home.js  index.css  index.js  login.js  signup.js
src/frontend/src/components/: Account.js  Anunt.js  Cart.js  Chat.js  Footer.js  Header.js  Home.js  Item.js  Layout.js  Product.js  Productdisplay.js
src/frontend/src/components/Assert/: all_product.js
src/frontend/src/components/Comment/: Comment.css  (+3 more)
src/frontend/src/src/: App.js  email.js
tasks/: README.md
(+27 files in other folders)
