[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs="2.1.0"
actix-web="4.5.1"
serde="1.0.197"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha256="1.5.0"