[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs="2.1.0"
actix-web={version="4.5.1", features=["openssl"]}
actix-cors="0.7.0"
serde="1.0.197"
serde_json="1.0.115"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha256="1.5.0"
chrono="0.4.11"
local-ip-address="0.6.1"
env_logger = "0.11.3"
openssl = {version = "0.10.60", features = ["v110"]}
